added menu, map html links and other jio

--- a/custom.css
+++ b/custom.css
@@ -8,5 +8,19 @@ font-family: 'Ledger', serif;
 padding: 15px 15px;
 margin: 0px 20px ;
 color: inherit;
-background-color: #ecf0f1;
+
+}
+
+.google-maps {
+    position: relative;
+    padding-bottom: 55%; // This is the aspect ratio
+    height: 0;
+    overflow: hidden;
+}
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
 }
